# XilinxCapacity

./: .gitignore  Arty-S7-25-Master.xdc  MANIFEST.in  README.md  pinmap_arty_s7_csga324.html  pyproject.toml  xcap.py
.github/workflows/: ci.yml  release.yml
package_data/: S7_CSGA324.txt
